# nickel

./: .gitignore  Dockerfile  Justfile  compose.yml  pyproject.toml
nickel/: server.py
