[project]
name = "nickel"
version = "0.1.0"
description = "Simple yt-dlp web API wrapper"
authors = [
    {name = "Dominic Frye",email = "me@itsnebula.net"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "yt-dlp (>=2025.6.30,<2026.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.9.0,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.8.4"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["E722"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
